bugs removed; navBar jump, contactbutton not styling in safari, ios, autofill contact form removed, new page on call-to-action

--- a/less/contact.less
+++ b/less/contact.less
@@ -20,7 +20,7 @@ form{
     label{
         padding-top: 5%;
     }
-    input[type="button"] {
+    input[type="reset"] {
 
     display: flex;
     justify-content: center;
